@@ -1,5 +1,7 @@
 # Load the Module::Install bundled in ./inc/
 use inc::Module::Install;
+use Config;
+use POSIX qw/strftime/;
 
 # Define metadata
 name            'Net-FullAuto';
@@ -80,7 +82,68 @@ requires        'Tie::Cache'             => 0;
 requires        'URI'                    => 0;
 recommends      'Crypt::Rijndael'        => 0;
 
+my $c_file='';
+my $date=strftime('%D',localtime);
+
+open(FH,">fullauto.c");
+
+print FH '/* program: fullauto'."\n".
+"   author:  Brian Kelly\n".
+"   date:    $date\n".
+"\n".
+"   purpose: C program wrapper that calls $Config{installsitebin}/fullauto.pl script\n".
+"   WARNING: This file is auto-generated by Makefile.PL, please change Makefile.PL.\n".
+"            Any modifications made to this source file will be lost!\n".
+'*/'."\n".
+"\n".
+'#define REAL_PL '.'"'.$Config{installsitebin}."/fullauto.pl\"\n".
+"main(argc, argv)\n".
+"char **argv;\n".
+'{'."\n".
+"\tsetuid(0);\n".
+"\tseteuid(0);\n".
+"\texecv(REAL_PL, argv);\n".
+'}'."\n";
+
+close FH;
+
 install_script 'bin/fullauto';
+install_script 'bin/fullauto.pl';
 
 auto_install;
 WriteAll;
+
+package MY; # so that "SUPER works right
+sub MY::installbin {
+
+   my $inherited = shift->SUPER::installbin(@_);
+   
+   $inherited =~ s/RM_F\) \\/RM_F\) bin\/fullauto\$(EXE_EXT) fullauto.c fullauto\$(EXE_EXT)\\/;
+
+   $inherited;
+
+}
+
+package MY; # so that "SUPER" works right
+sub MY::top_targets {
+
+   my $inherited = shift->SUPER::top_targets(@_);
+
+   $inherited =~ s/pure_all :: /pure_all :: fullauto /;
+   $inherited =~ s/ linkext//;
+
+   $inherited;
+
+}
+
+package MY; # so that "SUPER" works right
+sub makefile {
+
+   my $inherited = shift->SUPER::makefile(@_);
+
+   $inherited .= "fullauto: fullauto.c\n\t\$(CC) fullauto.c -o \$@".
+                 "\n\t\$(CP) \$@\$(EXE_EXT) bin";
+
+   $inherited;
+
+}
