@@ -24,6 +24,14 @@
 #
 ################################################################
 
+2010-07-13  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.13 released.
+
+        * Modified Build to compile C Wrapper fullauto(.exe)
+          to fullauto.pl to use with setuid 
+
+
 2009-07-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.12 released.
